# fastapi_project

./: Dockerfile  docker-compose.yml  items_views.py  main.py  pyproject.toml
users/: views.py
